--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "csv-parser": "^3.2.0",
     "express": "^5.1.0",
     "knex": "^3.1.0",
+    "node-fetch": "^3.3.2",
     "sqlite3": "^5.1.7",
     "zod": "^3.25.67"
   }
